[gd_scene load_steps=15 format=3 uid="uid://phnoalyvfkxs"]

[ext_resource type="Texture2D" uid="uid://cha6qncerkfu6" path="res://Assets/Objects/Torch-Sprites/SmallTorch.png" id="1_kal34"]
[ext_resource type="Script" path="res://Scrpits/SmallTorch.gd" id="1_nncw6"]
[ext_resource type="AudioStream" uid="uid://dhc3kia3e06e8" path="res://SoundFX/Minifantasy_Dungeon_SFX/LightCatch.mp3" id="3_2rv8o"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_cu7ks"]
blend_mode = 1
light_mode = 2
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="Gradient" id="Gradient_whf75"]
offsets = PackedFloat32Array(0, 0.53)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_nxopm"]
gradient = SubResource("Gradient_whf75")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_41qik"]
blend_mode = 1
light_mode = 2

[sub_resource type="Gradient" id="Gradient_n7ywo"]
offsets = PackedFloat32Array(0, 0.567742)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vpl58"]
gradient = SubResource("Gradient_n7ywo")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_2ukha"]
radius = 4.0

[sub_resource type="Animation" id="Animation_cqyn1"]
resource_name = "Off"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SmallTourch:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_q5lbk"]
resource_name = "On"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SmallTourch:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_p0lt4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SmallTourch:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pvgiw"]
_data = {
"Off": SubResource("Animation_cqyn1"),
"On": SubResource("Animation_q5lbk"),
"RESET": SubResource("Animation_p0lt4")
}

[node name="SmallTorch" type="Area2D" groups=["Torch"]]
position = Vector2(43, 2)
script = ExtResource("1_nncw6")

[node name="SmallTourch" type="Sprite2D" parent="."]
light_mask = 3
visibility_layer = 3
position = Vector2(-44, -4)
texture = ExtResource("1_kal34")
hframes = 4

[node name="PointLight2D" type="PointLight2D" parent="SmallTourch"]
material = SubResource("CanvasItemMaterial_cu7ks")
position = Vector2(1, -17)
scale = Vector2(0.5, 0.5)
color = Color(0, 0, 0, 1)
blend_mode = 1
texture = SubResource("GradientTexture2D_nxopm")

[node name="Alo" type="Sprite2D" parent="SmallTourch/PointLight2D"]
modulate = Color(0, 0.247059, 0.741176, 0.294118)
material = SubResource("CanvasItemMaterial_41qik")
position = Vector2(2.84782, -11.411)
scale = Vector2(0.5, 0.5)
texture = SubResource("GradientTexture2D_vpl58")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-43, -22)
shape = SubResource("CircleShape2D_2ukha")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pvgiw")
}

[node name="LightCatch" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_2rv8o")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
